<resources>
    <string name="app_name">iot interface</string>

    <string-array name="slider">
        <item>Name</item>
        <item>Initial Value</item>
        <item>Minimal Value</item>
        <item>Maximum Value</item>
        <item>Status</item>
    </string-array>

    <string-array name="onoff">
        <item>Name</item>
        <item>Initial Value</item>
        <item>Color</item>
    </string-array>

    <string-array name="num_pad">
        <item>Name</item>
        <item>Color</item>
    </string-array>

    <string-array name="udlr">
        <item>Name</item>
        <item>Color</item>
    </string-array>

    <string-array name="YesNo">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="Control">
        <item>Control</item>
        <item>Status</item>
    </string-array>

    <string-array name="Devices">
        <item>Aircon</item>
        <item>Ceiling_Lights</item>
        <item>Fan</item>
        <item>TV</item>
    </string-array>

    <string-array name="number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="variable">
        <item>fan_speed</item>
        <item>led</item>
        <item>mode</item>
        <item>temperature</item>
        <item>brightness</item>
        <item>color</item>
        <item>channel</item>
        <item>volume</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="toggle">Toggle Button</string>
    <string name="On">The toggle is on</string>
    <string name="Off">The toggle is off</string>
    <string name="Slider">Slider (0-100)</string>
    <string name="read">Read</string>
    <string name="widgetName">Widget Name: </string>
    <string name="refresh">Refresh</string>
    <string name="disWidth">Width: </string>
    <string name="disHeight">Height: </string>
    <string name="disValue">Value: </string>
    <string name="disMin">Min: </string>
    <string name="disMax">Max: </string>

    <string name="appName">DynamicButton</string>
    <string name="show_text">Show Text</string>
    <string name="create">Create</string>
    <string name="click_on_me">Click on me</string>
    <string name="reset">RESET</string>
    <string name="confirm">CONFIRM</string>

    //Keypad Value
    <string name="keypad1">1</string>
    <string name="keypad2">2</string>
    <string name="keypad3">3</string>
    <string name="keypad4">4</string>
    <string name="keypad5">5</string>
    <string name="keypad6">6</string>
    <string name="keypad7">7</string>
    <string name="keypad8">8</string>
    <string name="keypad9">9</string>
    <string name="keypad0">0</string>
    <string name="keypadStar">*</string>
    <string name="keypaddel">Del</string>

    //Direction Button
    <string name="OK">OK</string>
    <string name="change">CHANGE</string>

    //Spinner
    <string name="selected_item">Selected item:</string>

    //Radio Button
    <string name="you_selected">You selected:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

</resources>